@@ -1,6 +1,11 @@
 Changes between 1.3.0 and 1.3.1
 ==================================================
 
+- fix issue96: make capturing more resilient against Control-C 
+  interruptions (involved somewhat substantial refactoring
+  to the underlying capturing functionality to avoid race 
+  conditions).
+
 - make py.test.cmdline.main() return the exitstatus 
   instead of raising (which is still done by py.cmdline.pytest())
   and make it so that py.test.cmdline.main() can be called
